# ResidueTheorem

./: CMakeLists.txt  README.md
include/math/: ComplexFunction.h  ComplexNumber.h
src/: main.cpp
src/math/: CMakeLists.txt  ComplexFunction.cpp  ComplexNumber.cpp
test/: CMakeLists.txt  test_complexfunction.cpp  test_complexnumber.cpp
